--- a/carniceriaelcarvajal/frontend/templates/frontend/login.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/login.html
@@ -4,7 +4,7 @@
     <!-- Metadatos y enlaces a recursos externos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carnicería El Carvajal - Registro</title>
+    <title>Carnicería El Carvajal - Iniciar sesión</title>
     <!-- Cargar archivos estáticos de Django -->
     {% load static %}
     <!-- Enlace a jQuery -->
@@ -27,15 +27,29 @@
         <div class="container mt-5">
             <!-- Título del formulario -->
             <h2 class="text-center">Iniciar sesión</h2>
+            <!-- Mostrar mensajes de error -->
+            {% if messages %}
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
             <!-- Formulario de inicio de sesión -->
-            <form id="login-form">
+            <form id="login-form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
                 <div class="mb-3">
-                    <label for="email" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="Correo" required>
+                    <label for="username" class="form-label">Nombre de usuario</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Iniciar sesión</button>
             </form>
@@ -53,8 +67,6 @@
         });
     </script>
     <script src="{% static 'frontend/js/navbar.js' %}"></script>
-    <script src="{% static 'frontend/js/login.js' %}"></script>
-    <!-- Enlace a Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
