--- a/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
@@ -17,11 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'productos' %}">Productos</a>
                 </li>
+              
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'sugerencias' %}">Sugerencias</a>
+                    <a class="nav-link" href="{% url 'sugerencias' %}">Contacto y Sugerencias</a>
                 </li>
             </ul>
             <!-- Elementos de la derecha -->
