--- a/carniceriaelcarvajal/frontend/templates/frontend/sugerencias.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/sugerencias.html
@@ -61,7 +61,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ¡Gracias por tu sugerencia!
+                    ¡Gracias!
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
